client/blocks/reader-site-notification-settings/style.scss
.reader-site-notification-settings__button {
	color: $gray;

	&:hover {
		cursor: pointer;
	}
}

.reader-site-notification-settings__button-label {
	font-size: 14px;
	margin-left: -2px;

	@include breakpoint( "<480px" ) {
		display: none;
	}
}

.reader-popover__wrapper {

	.segmented-control {
		background: inherit;
		padding: 0 12px 17px 16px;
	}

	.segmented-control__link {
		background: $white;
	}

	.reader-site-notification-settings__popout-toggle:nth-child(2),
	.reader-site-notification-settings__popout-toggle:nth-child(3),
	.reader-site-notification-settings__popout-toggle:nth-child(4) {
		display: flex;
		justify-content: space-between;
	}
}

.reader-site-notification-settings__popout-toggle {
	border-top: 1px solid lighten( $gray, 20% );
	color: $gray-dark;
	font-size: 14px;
	padding: 10px 0 10px 15px;
	text-align: left;

	&:first-child {
		border-top: 0;
	}

	.gridicon {
		fill: $gray;
		position: relative;
			left: 3px;
			top: 2px;
	}
}

.reader-site-notification-settings .gridicons-cog {
	fill: lighten( $gray, 10% );
	height: 18px;
	position: relative;
		left: -4px;
		top: 4px;

	@include breakpoint( "<480px" ) {
		left: 0;
	}
}

.reader-site-notification-settings__popout-form-toggle {
	margin-left: 45px;
}

.reader-site-notification-settings__popout-hint {
	color: $gray;
	font-size: 12px;
	margin-bottom: 0;
	width: 220px;
}

